# simple-site

./: main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: CI.yml
components/: base.py
helper/: build.py  serve.py
pages/: base.py  index.py
public/: index.html
tests/: conftest.py  test_main.py
tests/components/: test_base.py
tests/helper/: test_build.py
tests/pages/: test_base.py
